--- a/client/views/vote_layout/header.html
+++ b/client/views/vote_layout/header.html
@@ -1,8 +1,7 @@
 <div class="color-bar"></div>
 <header>
     <div class="logo">
-        <!--<img src="img/tunefish.svg" alt="Tunefish" class="anim-logo"/>-->
-        <span>tunefish</span>
+        <span><a href="/vote">tunefish</a></span>
     </div>
 
     {% if g.user %}
