--- a/client/views/vote_layout/layout_vote_admin.html
+++ b/client/views/vote_layout/layout_vote_admin.html
@@ -8,9 +8,7 @@
     <title>tunefish</title>
 
    <link href="{{ url_for('static', filename='css/app-vote-admin.min.css') }}" type="text/css" rel="stylesheet"/>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css" rel="stylesheet"/>
 
     <!-- WEBFONT CACHING -->
     <script type="text/javascript">
@@ -69,7 +67,8 @@
 </footer>
 
 <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/app-vote-admin.js') }}"></script>
 
 {% block inlinejs %}{% endblock %}
 
