Improve the admin_band_view

--- a/client/views/vote/admin/band_list_content.html
+++ b/client/views/vote/admin/band_list_content.html
@@ -57,8 +57,8 @@
                         <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Bearbeiten</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Löschen</a></li>
+                        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Bearbeiten</a></li>
+                        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Löschen</a></li>
                         {% if band.state == 1 %}
                             <li role="presentation" class="divider"></li>
                             <li role="presentation">
