--- a/client/views/vote/admin/band_view.html
+++ b/client/views/vote/admin/band_view.html
@@ -7,30 +7,79 @@
     <section class="main-content profile finish">
         <div class="container">
             <div class="row">
-                <div class="profile-form-wrapper col-xs-12">
+                <div class="col-xs-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ url_for('vote.admin.index') }}">Administration</a></li>
                         <li class="active">Details "{{ band.name }}"</li>
                     </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-2">
+                    <a href="{{ url_for('vote.admin.bands.view', band_id = (band.id-1)) }}">
+                        &nbsp; &laquo; vorherige Band
+                    </a>
+                </div>
 
-                    <h1>Band {{ band.name }}
+                <div class="col-xs-2 col-xs-offset-3">
+
+                    <div class="dropdown pull-right">
+                        <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                            Optionen
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                            <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Bearbeiten</a></li>
+                            <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Löschen</a></li>
+                            {% if band.state == 1 %}
+                                <li role="presentation" class="divider"></li>
+                                <li role="presentation">
+                                    <a class="voteStateDetail" role="menuitem" tabindex="-1" href="{{ url_for('vote.admin.bands.vote_state', band_id=band.id) }}">Aus dem Voting nehmen</a>
+                                </li>
+                            {% elif band.state == 4 %}
+                                <li role="presentation" class="divider"></li>
+                                <li role="presentation">
+                                    <a class="voteStateDetail" role="menuitem" tabindex="-1" href="{{ url_for('vote.admin.bands.vote_state', band_id=band.id) }}">Ins Voting nehmen</a>
+                                </li>
+                        {% endif %}
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="col-xs-2 col-xs-offset-3">
+                    <a href="{{ url_for('vote.admin.bands.view', band_id = (band.id+1)) }}" class="text-right">nächste
+                        Band &raquo; </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1>Band "{{ band.name }}"
                         <small>{{ band.vote_count }} Stimme{% if band.vote_count != 1 %}n{% endif %},
                             &#8960; {{ band.vote_average }}</small>
                     </h1>
                 </div>
             </div>
+
             <br/>
 
-            {% macro show(field) %}{% if field != 'None' %}{{ field }}{% else %}-{% endif %}{% endmacro %}
+            {% macro show(field) %}{% if field %}{{ field }}{% else %}-{% endif %}{% endmacro %}
 
             <div class="row">
                 <div class="col-xs-3">
-                    <a href="#bandfoto"><img src="{{ band.thumbnail }}" alt="{{ band.name }}" class="band-image" /></a>
+                    {% if band.thumbnail %}
+                        <a href="#bandfoto">
+                            <img src="{{ band.thumbnail }}" alt="{{ band.name }}" class="band-image"/>
+                        </a>
+                    {% else %}
+                        Noch kein Bandfoto hochgeladen
+                    {% endif %}
                 </div>
 
                 <div class="col-xs-9">
                     <div class="row details">
-                        <div class="col-xs-2">
+                        <div class="col-xs-3">
                             {{ show(band.login) }}
                             <span>Benutzername</span>
                         </div>
@@ -41,19 +90,19 @@
                         </div>
 
 
-                        <div class="col-xs-2">
-                            {{ show(band.city) }} {% if band.distance != 'None' %}({{ band.distance }} km){% endif %}
+                        <div class="col-xs-3">
+                            {{ show(band.city) }} {% if band.distance %}({{ band.distance }} km){% endif %}
                             <span>Herkunft</span>
                         </div>
 
-                        <div class="col-xs-2 col-xs-offset-4">
-                            {{ band.state_label }}
+                        <div class="col-xs-3 col-xs-offset-1">
+                            <p id="voteState">{{ band.state_label }}</p>
                             <span>Bewerbungsstatus</span>
                         </div>
                     </div>
 
                     <div class="row details">
-                        <div class="col-xs-4">
+                        <div class="col-xs-5">
                             <p>
                                 <a href="mailto:{{ band.email }}">{{ band.email }}</a>
                                 {% if band.is_email_confirmed %} &nbsp; &#10003;{% endif %}
@@ -66,8 +115,9 @@
                             <span>Telefon</span>
                         </div>
 
-                        <div class="col-xs-2 col-xs-offset-3">
-                            {% if band.techrider != 'None' %}<a href="{{ band.techrider_url }}" target="techrider">vorhanden</a>{% else %}
+                        <div class="col-xs-3 col-xs-offset-1">
+                            {% if band.techrider %}
+                                <a href="{{ band.techrider_url }}" target="techrider">vorhanden</a>{% else %}
                                 fehlt{% endif %}
                             <span>Techrider</span>
                         </div>
@@ -75,26 +125,26 @@
 
                     <div class="row details">
                         <div class="col-xs-4">
-                            {% if band.website != 'None' %}
+                            {% if band.website %}
                                 <a href="{{ band.website }}">{{ band.website }}</a>
                             {% else %} - {% endif %}
                             <span>Website</span>
                         </div>
 
-                        <div class="col-xs-4">
-                            {% if band.youtube_id != 'None' %}
+                        <div class="col-xs-3">
+                            {% if band.youtube_id %}
                                 <a href="{{ band.youtube_url }}" target="youtube">{{ band.youtube_id }}</a>{% else %}
                                 - {% endif %}
                             <span>YouTube</span>
                         </div>
 
-                        <div class="col-xs-4">
-                            {% if band.facebook_page != 'None' %}
-                                <a href="{{ band.facebook_url }}" target="facebook">{{ band.facebook_page }}</a>{% else %}
+                        <div class="col-xs-3">
+                            {% if band.facebook_page %}
+                                <a href="{{ band.facebook_url }}"
+                                   target="facebook">{{ band.facebook_page }}</a>{% else %}
                                 - {% endif %}
                             <span>facebook</span>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -153,19 +203,25 @@
                 {% endfor %}
             {% else %}
                 <div class="row">
-                    <div class="col-xs-12">Es wurden noch keine Kommentare zu dieser Band verfasst</div>
+                    <div class="col-xs-12">
+                        <p>Es wurden noch keine Kommentare zu dieser Band verfasst</p>
+                    </div>
                 </div>
             {% endif %}
 
+            <br />
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>Bandfoto <small><a href="#top" name="bandfoto"></a></small></h3>
-                    {% if band.image != 'None' %}
-                        <a href="{{ band.image_url }}">
+                    <h3>Bandfoto
+                        <small><a href="#top" name="bandfoto"></a></small>
+                    </h3>
+
+                    {% if band.image_url %}
+                        <a href="{{ band.image_url }}" target="bandfoto">
                             <img src="{{ band.prev_image }}" alt="Band {{ band.name }}" width="100%"/>
                         </a>
                     {% else %}
-                        Noch kein Foto hochgeladen
+                        Noch kein Bandfoto hochgeladen
                     {% endif %}
                 </div>
             </div>
